--- a/src/components/list.css
+++ b/src/components/list.css
@@ -13,7 +13,7 @@
     background: #ff9999;
     padding: 20px;
     width: 250px;
-   margin-left: 70px;
+    margin-left: 55px
   }
   
   
@@ -24,8 +24,8 @@
     margin-right: 35px
   }
   h5{
-    text-align: center;
-    padding: 5px;
+   width: 350px;
+    
   }
   .flex{
     display: flex;
@@ -35,3 +35,11 @@
     justify-items: center;
   }
   
+  .bodorques{
+    display: flex;
+    flex-direction: column;
+    width: 730px;
+    height: 250px;
+    margin: 0   16px    16px    0;
+    box-shadow:  0 1px 0 rgba(0, 0, 0, .15)
+  }
