--- a/src/components/list.css
+++ b/src/components/list.css
@@ -1,8 +1,7 @@
 .top{
     justify-content: center;
     justify-items: center;
-    height: 200px;
-    margin-top: 200px;
+    height: auto;
     
   }
   .solid{
@@ -10,23 +9,24 @@
     left: 50px;
   }
   ol {
-    background: #ff9999;
+    background: #fd9999;
     padding: 20px;
     width: 250px;
-    margin-left: 55px
-  }
-  
-  
-  ol li {
-    background: #ffe5e5;
-    padding: 5px;
-    margin-left: 25px;
-    margin-right: 35px
-  }
-  h5{
-   width: 350px;
+    margin-left: 55px;
     
   }
+  ol li {
+    background: #ffe7ed;
+    padding: 5px;
+    margin-left: 15px;
+    margin-right: 25px;
+    width:180px;
+  }
+  h5{
+   width: 400px;
+    /* text-align: start; */
+  }
+  
   .flex{
     display: flex;
   }
@@ -35,11 +35,11 @@
     justify-items: center;
   }
   
-  .bodorques{
-    display: flex;
-    flex-direction: column;
-    width: 730px;
+  .marginques{
+    margin-left: 50px;
+   
+  }
+  .marginques2{
+    margin-left: 50px;
     height: 250px;
-    margin: 0   16px    16px    0;
-    box-shadow:  0 1px 0 rgba(0, 0, 0, .15)
   }
