--- a/src/components/Answer.css
+++ b/src/components/Answer.css
@@ -4,9 +4,9 @@
     width: 180px;
     height: 150px;
     margin: 0   16px    16px    0;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .15)
+   
     }
-    .name{
+    .answer{
         font-size: 2em;
         display: flex;
         flex-direction: column;
@@ -17,8 +17,11 @@
     }
     .dis{
         display: flex;
+        
         list-style: none;
         margin: 15px;
         
     }
-    
+    .bor{
+        border: dashed 1px #000000 ;
+    }
