--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -17,6 +17,7 @@
     border-radius:  50%;
     border: double 2px #c92424 ;
     animation: rotateOut 25s linear infinite;
+    display: flex;
     bottom: auto;
    right: 50px;
 }
@@ -49,49 +50,50 @@
 }
 .bubblesli:nth-child(5){
     left: 37%;
-    width: 50px;
-    height: 50px;
+    width: 130px;
+    height: 130px;
     animation-delay: 0;
 }
 .bubblesli:nth-child(6){
-    left: 47%;
+    left: 44%;
     width: 45px;
     height: 45px;
     animation-delay: 3s;
 }
 .bubblesli:nth-child(7){
-    left: 48%;
-    width: 130px;
-    height: 130px;
+    left: 53%;
+    width: 80px;
+    height: 80px;
     animation-delay: 5s;
+    
     
 }
 .bubblesli:nth-child(8){
-    left: 55%;
+    left: 62%;
     width: 100px;
     height: 100px;
     animation-delay: 10s;
 }
 .bubblesli:nth-child(9){
-    left: 63%;
+    left: 70%;
     width: 50px;
     height: 50px;
     animation-delay: 2s;
 }
 .bubblesli:nth-child(10){
-    left: 70%;
+    left: 78%;
     width: 100px;
     height: 100px;
     animation-delay: 3s;
 }
 .bubblesli:nth-child(11){
-    left: 82%;
+    left: 88%;
     width: 55px;
     height: 55px;
     animation-delay: 9s;
 }
 .bubblesli:nth-child(12){
-    left: 90%;
+    left: 96%;
     width: 25px;
     height: 25px;
     animation-delay: 6s;
