--- a/src/components/list.css
+++ b/src/components/list.css
@@ -44,3 +44,34 @@
     margin-left: 50px;
     height: 250px;
   }
+  .width{
+    display: flex;
+    justify-content: center;
+   margin: auto;
+   width: 250px;
+  }
+  .dis{
+    display: flex;
+    
+    list-style: none;
+    margin: 15px;
+    
+}
+
+.ans{
+  box-shadow: 0 0 6px 0 rgba(0,0,0,0.15);
+  display: flex;
+  width: 250px;
+  justify-content: center;
+  border-radius: 4px;
+  margin: auto;
+  overflow: hidden;
+  border: dashed 1px #000000 ;
+  
+}
+.space{
+  display: flex;
+  justify-content: space-evenly;
+  margin: auto;
+  width: 200px;
+}
