--- a/src/components/Auth.css
+++ b/src/components/Auth.css
@@ -24,3 +24,26 @@ display: flex;
 justify-content: center;
 margin: auto;
    }
+
+   .latest{
+    box-shadow: 0 0 6px 0 rgba(0,0,0,0.15);
+    border-radius: 4px;
+    margin: 20px;
+    overflow: hidden;
+    border: dotted 1px #000000 ;
+    width: 200px;
+    text-align: start;
+  }
+  .flxde{
+    display: flex;
+  margin: 10px;
+  }
+  .cen{
+    text-align: center;
+    margin-right: 100px
+  
+  }
+.login{
+  padding: 100px;
+  text-align: center;
+}
