--- a/src/components/Auth.css
+++ b/src/components/Auth.css
@@ -1,20 +1,4 @@
-img{
-  height: 300px;
-  width: 500px;
-}
-
-    /* .hero-bkg-animated {
-      background: gray url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;
-      width: 100%;
-      margin: 0;
-      text-align: center;
-      height: 300px;
-      padding-top: 120px;
-      box-sizing: border-box;
-      -webkit-animation: slide 20s linear infinite;
-      
-    } */
-    @-webkit-keyframes slide {
+  @-webkit-keyframes slide {
       from { background-position: 0 0; }
       to { background-position: -400px 0; }
   }
@@ -33,6 +17,8 @@ margin: auto;
     border: dotted 1px #000000 ;
     width: 200px;
     text-align: start;
+    padding: 10px;
+    
   }
   .flxde{
     display: flex;
@@ -40,7 +26,7 @@ margin: auto;
   }
   .cen{
     text-align: center;
-    margin-right: 100px
+    margin-right: 100px;
   
   }
 .login{
